--- a/My Notebook/RNN/RNN_LSTM.ipynb
+++ b/My Notebook/RNN/RNN_LSTM.ipynb
@@ -21,10 +21,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import torch\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -38,116 +39,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  1 of 1 completed\n"
+      "در حال بارگذاری داده‌ها از فایل محلی...\n",
+      "                Open      High       Low     Close  Adj Close     Volume\n",
+      "Date                                                                    \n",
+      "2010-01-04  7.622500  7.660714  7.585000  7.643214   6.454504  493729600\n",
+      "2010-01-05  7.664286  7.699643  7.616071  7.656429   6.465664  601904800\n",
+      "2010-01-06  7.656429  7.686786  7.526786  7.534643   6.362819  552160000\n",
+      "2010-01-07  7.562500  7.571429  7.466071  7.520714   6.351057  477131200\n",
+      "2010-01-08  7.510714  7.571429  7.466429  7.570714   6.393282  447610800\n"
      ]
     }
    ],
    "source": [
-    "df = yf.download('AAPL', start='2010-01-01', end='2021-01-01')"
+    "# مسیر فایل ذخیره‌سازی\n",
+    "file_path = 'AAPL_stock_data.csv'\n",
+    "\n",
+    "# چک کردن اینکه آیا فایل قبلاً دانلود شده است یا خیر\n",
+    "if os.path.exists(file_path):\n",
+    "    # اگر فایل وجود داشت، داده‌ها از فایل محلی بارگذاری می‌شوند\n",
+    "    print(\"در حال بارگذاری داده‌ها از فایل محلی...\")\n",
+    "    df = pd.read_csv(file_path, index_col='Date', parse_dates=True)\n",
+    "else:\n",
+    "    # اگر فایل وجود نداشت، داده‌ها دانلود و سپس ذخیره می‌شوند\n",
+    "    print(\"در حال دانلود داده‌ها از یاهو فایننس...\")\n",
+    "    df = yf.download('AAPL', start='2010-01-01', end='2021-01-01')\n",
+    "    df.to_csv(file_path)  # ذخیره داده‌ها در فایل CSV محلی\n",
+    "\n",
+    "# نمایش چند سطر ابتدایی برای تأیید\n",
+    "print(df.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Open</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>Adj Close</th>\n",
-       "      <th>Volume</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Date</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2010-01-04</th>\n",
-       "      <td>7.622500</td>\n",
-       "      <td>7.660714</td>\n",
-       "      <td>7.585000</td>\n",
-       "      <td>7.643214</td>\n",
-       "      <td>6.454505</td>\n",
-       "      <td>493729600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-01-05</th>\n",
-       "      <td>7.664286</td>\n",
-       "      <td>7.699643</td>\n",
-       "      <td>7.616071</td>\n",
-       "      <td>7.656429</td>\n",
-       "      <td>6.465664</td>\n",
-       "      <td>601904800</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2010-01-06</th>\n",
-       "      <td>7.656429</td>\n",
-       "      <td>7.686786</td>\n",
-       "      <td>7.526786</td>\n",
-       "      <td>7.534643</td>\n",
-       "      <td>6.362821</td>\n",
-       "      <td>552160000</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                Open      High       Low     Close  Adj Close     Volume\n",
-       "Date                                                                    \n",
-       "2010-01-04  7.622500  7.660714  7.585000  7.643214   6.454505  493729600\n",
-       "2010-01-05  7.664286  7.699643  7.616071  7.656429   6.465664  601904800\n",
-       "2010-01-06  7.656429  7.686786  7.526786  7.534643   6.362821  552160000"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head(3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +181,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Define the RNN model"
+    "# Define a Simple RNN model"
    ]
   },
   {
@@ -356,10 +287,16 @@
     "criterion = nn.MSELoss()\n",
     "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
     "\n",
-    "# Train the model\n",
     "num_epochs = 100\n",
     "train_losses = []\n",
     "test_losses = []\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train the model"
    ]
   },
   {
@@ -509,6 +446,13 @@
     "plt.ylabel('Price')\n",
     "plt.legend()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Defining a LSTM Model"
    ]
   },
   {
