--- a/My Notebook/2_CNN/Conv1d.ipynb
+++ b/My Notebook/2_CNN/Conv1d.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 64,
    "id": "ead86a96-381a-4b30-9c49-1b1b456615c6",
    "metadata": {},
    "outputs": [
@@ -10,10 +10,12 @@
      "data": {
       "text/plain": [
        "Parameter containing:\n",
-       "tensor([[[-0.1943,  0.1861, -0.5232]]], requires_grad=True)"
+       "tensor([[[-0.2416,  0.5538,  0.1020]],\n",
+       "\n",
+       "        [[ 0.4097,  0.3968,  0.3264]]], requires_grad=True)"
       ]
      },
-     "execution_count": 56,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,32 +25,55 @@
     "import torch.nn as nn\n",
     "\n",
     "# Create a 1D input tensor with 1 channel and a length of 6\n",
-    "input_tensor = torch.tensor([[1.0, 2.0, 3.0, 4.0, 5.0, 6.0]]).unsqueeze(0)\n",
-    "\n",
+    "input_tensor = torch.tensor([[1.0, 2.0, 3.0, 4.0, 5.0, 6.0],\n",
+    "[1.0, 2.0, 3.0, 4.0, 5.0, 6.0],[1.0, 2.0, 3.0, 4.0, 5.0, 6.0]]).unsqueeze(1)\n",
+    "    \n",
     "# Define a Conv1d layer\n",
-    "conv1d_layer = nn.Conv1d(in_channels=1, out_channels=1, kernel_size=3, stride=1)\n",
+    "conv1d_layer = nn.Conv1d(in_channels=1, out_channels=2, kernel_size=3, stride=1)\n",
     "conv1d_layer.weight"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 65,
    "id": "088f92c7-8177-4048-b831-5dca8dc0f15f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([1, 1, 6])"
+       "torch.Size([3, 1, 6])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": null,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "input_tensor.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3cfee3a6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 2, 4])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "output = conv1d_layer(input_tensor)\n",
+    "output.shape"
    ]
   },
   {
@@ -79,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "id": "db3fcab4-b958-430a-8830-d6f37c14e11e",
    "metadata": {},
    "outputs": [
@@ -89,8 +114,12 @@
      "text": [
       "Input tensor: tensor([[[1., 2., 3., 4., 5., 6.]]])\n",
       "Manual weights: Parameter containing:\n",
-      "tensor([[[ 0.5000,  1.0000, -0.5000]]], requires_grad=True)\n",
-      "Output tensor: tensor([[[1., 2., 3., 4.]]], grad_fn=<ConvolutionBackward0>)\n"
+      "tensor([[[-0.0103, -0.0366, -0.4226]],\n",
+      "\n",
+      "        [[-0.4186,  0.2244,  0.2746]]], requires_grad=True)\n",
+      "Output tensor: tensor([[[-1.8788, -2.3482, -2.8177, -3.2871],\n",
+      "         [ 0.9765,  1.0569,  1.1372,  1.2176]]],\n",
+      "       grad_fn=<ConvolutionBackward0>)\n"
      ]
     }
    ],
@@ -134,52 +163,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "59ad8d07-8b83-45c7-9001-0c3b520636d0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Output: tensor([[0.1006]], grad_fn=<AddmmBackward0>)\n",
-      "Loss: 0.8090052604675293\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "\n",
     "class CNN1D(nn.Module):\n",
-    "    def __init__(self, input_size, kernel_size=3, padding=0, dilation=1, stride=1):\n",
+    "    def __init__(self):\n",
     "        super(CNN1D, self).__init__()\n",
     "        # 1D Convolution layer with arbitrary padding, dilation, and stride\n",
     "        self.conv1d = nn.Conv1d(in_channels=1, out_channels=1, \n",
-    "                                kernel_size=kernel_size, \n",
-    "                                padding=padding, \n",
-    "                                dilation=dilation, \n",
-    "                                stride=stride)\n",
+    "                                kernel_size=3, \n",
+    "                                padding=0,  \n",
+    "                                stride=1)\n",
     "        self.kernel_size = kernel_size\n",
     "        self.padding = padding\n",
     "        self.dilation = dilation\n",
     "        self.stride = stride\n",
-    "    \n",
+    "        self.flat = nn.Flatten()\n",
+    "        self.fc = nn.Linear(4, 1)\n",
+    "\n",
     "    def forward(self, x):\n",
-    "        # Pass through the Conv1d layer\n",
     "        x = self.conv1d(x)\n",
     "        x = torch.relu(x)\n",
-    "        \n",
-    "        # Dynamically calculate the flattened size\n",
-    "        batch_size = x.size(0)  # Get the batch size\n",
-    "        output_size = x.size(1) * x.size(2)  # Flatten the output: channels * output length\n",
-    "        \n",
-    "        # Define the fully connected layer dynamically based on the conv output size\n",
-    "        self.fc = nn.Linear(output_size, 1).to(x.device)\n",
-    "        \n",
-    "        # Flatten and pass through the fully connected layer\n",
-    "        x = x.view(batch_size, -1)  # Flatten\n",
+    "        x = self.flat(x)\n",
     "        x = self.fc(x)\n",
     "        return x\n",
     "\n",
@@ -193,7 +204,38 @@
     "dilation = 1\n",
     "stride = 2\n",
     "\n",
-    "model = CNN1D(input_size=input_size, kernel_size=kernel_size, padding=padding, dilation=dilation, stride=stride)\n",
+    "model = CNN1D()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "bd81961b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3, 1, 4])"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yhat = model(input_tensor)\n",
+    "yhat.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ef0ba32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Loss function and optimizer\n",
     "criterion = nn.MSELoss()\n",
@@ -673,16 +715,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "name": "python"
   }
  },
  "nbformat": 4,
