--- a/My Notebook/7_Autoencoders/transfer_earning.ipynb
+++ b/My Notebook/7_Autoencoders/transfer_earning.ipynb
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "522ffbc6",
    "metadata": {},
    "outputs": [
@@ -214,7 +214,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/5], Loss: 0.0184\n"
+      "Epoch [1/5], Loss: 0.0184\n",
+      "Epoch [2/5], Loss: 0.0123\n",
+      "Epoch [3/5], Loss: 0.0111\n",
+      "Epoch [4/5], Loss: 0.0105\n",
+      "Epoch [5/5], Loss: 0.0088\n"
      ]
     }
    ],
@@ -245,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4bf5c79b",
    "metadata": {},
    "outputs": [],
@@ -275,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0214efbf",
    "metadata": {},
    "outputs": [],
@@ -299,10 +303,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "d54a56a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/5], Loss: 0.8399\n",
+      "Epoch [2/5], Loss: 0.4020\n",
+      "Epoch [3/5], Loss: 0.3212\n",
+      "Epoch [4/5], Loss: 0.5398\n",
+      "Epoch [5/5], Loss: 0.2340\n"
+     ]
+    }
+   ],
    "source": [
     "for epoch in range(5):\n",
     "    for data, labels in train_loader:\n",
